add page uslugi/programma-loyalnosti/

--- a/index.html
+++ b/index.html
@@ -89,12 +89,12 @@
                         <ul>
                             <li><span>Покупателям</span></li>
                             <li><a href="#/uslugi/pokupka-kvartir-i-komnat/">Покупка квартир и комнат</a></li>
-                            <li><a href="#/">Квартиры в новостройках</a></li>
-                            <li><a href="#/">Загородная недвижимость</a></li>
+                            <li><a href="#/uslugi/pokupka-kvartir-v-novostroykakh/">Квартиры в новостройках</a></li>
+                            <li><a href="#/uslugi/pokupka-zagorodnoy-nedvizhimosti/">Загородная недвижимость</a></li>
                             <li><a href="#/">Помощь в получении ипотеки</a></li>
                             <li><a href="#/">Коммерческая недвижимость</a></li>
                             <li><a href="#/">Лизинговые услуги</a></li>
-                            <li><a href="#/">Программа лояльности</a></li>
+                            <li><a href="#/uslugi/programma-loyalnosti/">Программа лояльности</a></li>
                         </ul>
                         <ul>
                             <li><span>Владельцам</span></li>
