Change firm name and change phone number

--- a/index.html
+++ b/index.html
@@ -36,16 +36,16 @@
     <link rel="stylesheet" href="/Content/css/main.css">
 
     <header class="container container--center header">
-        <div class="col--1-1 header__lang">
+        <!-- <div class="col--1-1 header__lang">
             <a href="">English version →</a>
-        </div>
-        <div class="col--1-2 header__logo">
+        </div> -->
+        <div class="col--1-2 header__logo margin--top">
             <a href="#/">
-                <img src="/Content/img/logo_25.png" alt="">
+                <img src="/Content/img/logo.jpg" alt="">
             </a>
         </div>
-        <div class="col--1-2 header__phone">
-            <a href="tel:+74953631010" class="header__phone-number">+7 (495) 363-10-10</a>
+        <div class="col--1-2 header__phone margin--top">
+            <a href="tel:+375293213620" class="header__phone-number">+375-(29)-321-36-20</a>
 
             <p class="margin--top">
                 <a link="#/" class="text--small link link--dotted text--italic">Заказать звонок</a>
@@ -71,7 +71,6 @@
                         <ul>
                             <li><span>Загородная</span></li>
                             <li><a href="#/prodazha-domov-kottedzhej/">Коттеджи, таунхаусы, участки</a></li>
-                            <li><a href="#/prodazha-domov-kottedzhej/">Коттеджные поселки</a></li>
                             <li><a href="#/arenda-kottedzhey/">Аренда коттеджей</a></li>
                         </ul>
                         <ul>
@@ -91,10 +90,8 @@
                             <li><a href="#/uslugi/pokupka-kvartir-i-komnat/">Покупка квартир и комнат</a></li>
                             <li><a href="#/uslugi/pokupka-kvartir-v-novostroykakh/">Квартиры в новостройках</a></li>
                             <li><a href="#/uslugi/pokupka-zagorodnoy-nedvizhimosti/">Загородная недвижимость</a></li>
-                            <li><a href="#/">Помощь в получении ипотеки</a></li>
+                            <li><a href="#/uslugi/programma-loyalnosti/">Помощь в получении кредита</a></li>
                             <li><a href="#/">Коммерческая недвижимость</a></li>
-                            <li><a href="#/">Лизинговые услуги</a></li>
-                            <li><a href="#/uslugi/programma-loyalnosti/">Программа лояльности</a></li>
                         </ul>
                         <ul>
                             <li><span>Владельцам</span></li>
@@ -106,22 +103,18 @@
                             <li><a href="#/">Оценка недвижимости</a></li>
                             <li><a href="#/">Коммерческая недвижимость</a></li>
                             <li><a href="#/">Согласование перепланировок</a></li>
-                            <li><a href="#/">Согласование отдельного входа</a></li>
                         </ul>
                         <ul>
                             <li><span>Арендаторам</span></li>
                             <li><a href="#/">Квартиры и комнаты</a></li>
                             <li><a href="#/">Аренда коттеджей</a></li>
                             <li><a href="#/">Нежилые помещения</a></li>
-                            <li><a href="#/">Лизинг для бизнеса</a></li>
-
                             <li><span>Застройщикам</span></li>
-                            <li><a href="#/">Девелоперский консалтинг загородной недвижимости</a></li>
-                            <li><a href="#/">Управление продажами коттеджного поселка</a></li>
+                            <li><a href="#/">Оказываем помощь в подборе покупателей</a></li>
                         </ul>
                     </div>
                 </li>
-                <li><a href="#/ipoteka">Ипотека</a></li>
+                <li><a href="#/ipoteka">Кредитование</a></li>
                 <li uib-dropdown is-open="status.isopenCarrera">
                     <a id="single-button" href="/" uib-dropdown-toggle data-ng-disabled="disabled">
                         Карьера
@@ -130,7 +123,6 @@
                         <ul>
                             <li><a href="#/jobs/vacancy/">Вакансии</a></li>
                             <li><a href="#/jobs/training-center/">Учебный центр</a></li>
-                            <li><a href="#/jobs/success/">Истории успеха</a></li>
                         </ul>
                     </div>
                 </li>
@@ -143,10 +135,8 @@
                         <ul>
                             <li><a href="#/company/company/">Деятельность компании</a></li>
                             <li><a href="#/company/history/">История</a></li>
-                            <li><a href="#/">Награды</a></li>
                             <li><a href="#/company/review/">Отзывы клиентов</a></li>
                             <li><a href="#/">Наши партнеры</a></li>
-                            <li><a href="#/">Социальная ответственность</a></li>
                         </ul>
                     </div>
                 </li>
@@ -157,11 +147,8 @@
                     </a>
                     <div class="dropdown-menu" uib-dropdown-menu role="menu" aria-labelledby="single-button">
                         <ul>
-                            <li><a href="#/news/press/">Пресс-центр</a></li>
-                            <li><a href="#/">Новости рынка</a></li>
+                            <li><a href="#/news/press/">Новости рынка</a></li>
                             <li><a href="#/">Новости компании</a></li>
-                            <li><a href="#/">Мы в прессе</a></li>
-                            <li><a href="#/">ИНКОМ в эфире</a></li>
                         </ul>
                     </div>
                 </li>
@@ -175,11 +162,11 @@
     <footer class="container container--center">
         <div class="footer">
             <div class="footer__top">
-                © 2001-2016. ИНКОМ-Недвижимость  |
+                © 2001-2016. ЗемНедвижимость  |
                 <a href="" class="link--reset" rel="nofollow">Ограничение ответственности</a> |
                 <a href="" class="link--reset" rel="nofollow">Карта сайта</a>
 
-                <a class="phone" href="tel:+74953631010"><div class="ya-phone-uvr">+7 (495) 363-10-10</div></a>
+                <a class="phone" href="tel:+375293213620"><div class="ya-phone-uvr">+375-(29)-321-36-20</div></a>
             </div>
             <div class="footer__content">
                 <div class="grid grid--small grid-col--1-4">
