--- a/index.html
+++ b/index.html
@@ -176,7 +176,6 @@
                         <li><a href="#/">Новостройки</a></li>
                         <li><a href="#/">Аренда квартир, комнат</a></li>
                         <li><a href="#/">Коттеджи, таунхаусы, участки</a></li>
-                        <li><a href="#/">Коттеджные поселки</a></li>
                         <li><a href="#/">Аренда коттеджей</a></li>
                         <li><a href="#/">Нежилые помещения</a></li>
                         <li><a href="#/">Аренда нежилых помещений</a></li>
@@ -185,18 +184,17 @@
                     <ul class="list">
                         <li><a href="#/" class="title">Услуги</a></li>
                         <li><a href="#/">Обмен квартир</a></li>
-                        <li><a href="#/">Помощь в получении ипотеки</a></li>
+                        <li><a href="#/">Помощь в получении кредита</a></li>
                         <li><a href="#/">Продать квартиру, комнату</a></li>
                         <li><a href="#/">Оценка недвижимости</a></li>
                         <li><a href="#/">Согласование перепланировок</a></li>
-                        <li><a href="#/">Согласование отдельного входа</a></li>
                         <li><a href="#/">Лизинговые услуги</a></li>
                         <li><a href="#/" class="title">Все услуги</a></li>
                     </ul>
 
                     <ul class="list">
                         <li><a href="#/" class="title">Карьера</a></li>
-                        <li><a href="#/" class="title">Ипотека</a></li>
+                        <li><a href="#/" class="title">Кредит</a></li>
                         <li><a href="#/">Вакансии</a></li>
                         <li><a href="#/">Учебный центр</a></li>
                     </ul>
@@ -204,7 +202,6 @@
                     <ul class="list">
                         <li><a href="#/" class="title">О компании</a></li>
                         <li><a href="#/">История</a></li>
-                        <li><a href="#/">Награды</a></li>
                         <li><a href="#/">Отзывы клиентов</a></li>
                         <li><a href="#/" class="title">Наши офисы</a></li>
                     </ul>
@@ -216,7 +213,6 @@
 
     <script src="bower_components/jquery/dist/jquery.min.js"></script>
     <script src="bower_components/owl.carousel/src/js/owl.carousel.js"></script>
-    <!-- <script src="Scripts/Scripts.js"></script> -->
 
     <script src="/bower_components/angular/angular.min.js"></script>
     <script src="/bower_components/angular-route/angular-route.min.js"></script>
