add officec adress

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="ru" data-ng-app="app">
     <head>
         <meta charset="UTF-8">
-        <title>Document</title>
+        <title>ЗемНедвижимость - агентство недвижимости</title>
     </head>
     <body data-ng-controller="homeController">
 
