Fixed office information

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                         </ul>
                     </div>
                 </li>
-                <li><a href="#/offices" class="active">Наши офисы</a></li>
+                <li><a href="#/offices">Наши офисы</a></li>
             </ul>
         </div>
     </nav>
